ADD_UTILITIES_EXECUTABLE(AddModeTo2DFld    util AddModeTo2DFld.cpp)
ADD_UTILITIES_EXECUTABLE(CombinePartitions util-extra CombinePartitions.cpp)
ADD_UTILITIES_EXECUTABLE(ExtractMeanModeFromHomo1DFld  util ExtractMeanModeFromHomo1DFld.cpp)
ADD_UTILITIES_EXECUTABLE(FldAddFalknerSkanBL   util-extra FldAddFalknerSkanBL.cpp)
ADD_UTILITIES_EXECUTABLE(FldAddFld         util FldAddFld.cpp)
ADD_UTILITIES_EXECUTABLE(FldAddVort        util FldAddVort.cpp)
ADD_UTILITIES_EXECUTABLE(FldToTecplot      util FldToTecplot.cpp)
ADD_UTILITIES_EXECUTABLE(FldToGmsh         util FldToGmsh.cpp)
ADD_UTILITIES_EXECUTABLE(FldToVtk          util FldToVtk.cpp)
ADD_UTILITIES_EXECUTABLE(ProbeFld          util-extra ProbeFld.cpp)
ADD_UTILITIES_EXECUTABLE(XmlToTecplot      util XmlToTecplot.cpp)
ADD_UTILITIES_EXECUTABLE(XmlToTecplotWireFrame  util XmlToTecplotWireFrame.cpp)
ADD_UTILITIES_EXECUTABLE(XmlToVtk          util XmlToVtk.cpp)

# Generate list of available solvers
FILE(GLOB dir_list "*")
LIST(REMOVE_ITEM dir_list "${CMAKE_SOURCE_DIR}/PreProcessing/.svn")
FOREACH(dir ${dir_list})
    IF(IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
        ADD_SUBDIRECTORY(${dir})
    ENDIF(IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
ENDFOREACH(dir ${dir_list})
